--- a/styles.css
+++ b/styles.css
@@ -84,9 +84,9 @@ section {
 }
 
 .container {
-  width: 100%;
+  /* width: 100%;
   display: flex;
-  max-width: 1300px;
+  max-width: 1300px; */
 }
 
 .card {
@@ -144,7 +144,6 @@ footer {
   align-items: center;
   background-color: #93978A;
   position: absolute;
-  bottom: 0;
   width: 100%;
 }
 
@@ -207,4 +206,8 @@ th {
 
 td {
   border: 1px solid;
+}
+
+.blue {
+  background-color: blue;
 }
