--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,16 @@ a {
   border-radius: 2px;
   font-size: 20px;
   margin-left: 10px;
+  width: 10vh;
+}
+
+.botonera a.active,a:hover{
+  background-color: aqua;
+  transition: .5s;
 }
 
 header {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   height: 10vh;
@@ -50,6 +57,7 @@ header {
 .Botonera {
   align-items: center;
   justify-content: center;
+  width: 10vh;
 }
 
 nav {
@@ -125,7 +133,6 @@ section {
 .card .contenido {
   padding: 10px;
   text-align: center;
-
 }
 
 .card .contenido p, a {
@@ -144,8 +151,8 @@ footer {
   align-items: center;
   background-color: #93978A;
   position: absolute;
-  bottom: 0;
   width: 100%;
+  bottom: 0;
 }
 
 footer h1{
@@ -165,13 +172,6 @@ footer h1{
   line-height: 60px; 
 }
 
-/* article {
-  display: flex;
-  justify-content: center;
-  padding: 2vw;
-  font-weight: 400;
-} */
-
 article form{
   margin: 0 auto;
   margin-top: 2vw;
@@ -182,9 +182,9 @@ article form{
   font-size: 15px;
 }
 
-.contacto-two label,input{
+/* .contacto-two label,input{
   font-size: 35px;
-}
+} */
 
 .field-two textarea {
   font-size: 38px;
@@ -207,4 +207,60 @@ th {
 
 td {
   border: 1px solid;
+}
+
+
+@media (max-width:960px){
+  header {
+    height: 8vh;
+    width: 98%;
+  }
+  .loguito img {
+    width: 2.8rem;
+    background-color: black;
+    height: 2rem;
+    border-radius: 5px;
+  }
+  .botonera{
+    height: 9vh;
+    width: 82%;
+  }
+  footer {
+    width: 100%;
+    height: 8vh;
+    position: relative;
+  }
+}
+@media (max-width:768px){
+  header {
+    height: 8vh;
+    width: 97%;
+  }
+  .botonera {
+    width: 80%;
+  }
+  section {
+    width: 95%;
+    display: block;
+    margin: 0vh;
+  }
+  .container {
+    display: block;
+    width: 90vw;
+    justify-content: center;
+  }
+}
+@media (max-width:640px){
+  header {
+    width: 96%;
+  }
+  .botonera {
+    width: 100%;
+    height: 5vh;
+  }
+  .botonera a{
+    font-size: 0.7em;
+    width: 5vh;
+    height: 3vh;
+  }
 }
