--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@
 body {
   font-family: sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 a {
@@ -91,14 +94,17 @@ section {
 }
 
 .container {
-  /* width: 100%;
+  width: 100%;
   display: flex;
-  max-width: 1300px; */
+  max-width: 1300px;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
 }
 
 .card {
-  display: block;
-  width: 100%;
+  display: inline-grid;
+  width: 20%;
   background-color: red;
   margin: 20px;
   border-radius: 6px;
@@ -149,10 +155,11 @@ footer {
   justify-content: space-between;
   align-items: center;
   background-color: #93978A;
-  position: absolute;
+  margin-top: auto;
   width: 100%;
-  bottom: 0;
 }
+
+
 
 footer h1{
   padding-right: 10px;
@@ -261,5 +268,8 @@ td {
     font-size: 0.7em;
     width: 5vh;
     height: 3vh;
+  }
+  .card {
+    width: 103%;
   }
 }
